# wasm

native-library/: main.c  nativeplugin.txt  plugin.c  test_plugin.c  test_plugin.wasm
native-library/callback/: CMakeLists.txt  func  func.c  func1.c  func1.wasm  run_func.c
wasm-micro-runtime/samples/callback/: common  func.c  func.wasm
wasm-micro-runtime/samples/callback/linux/: common
wasm-micro-runtime/samples/callback/posix/: main.c
